fixed z-index error with menu

--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,7 @@ a {
   font-family: "FaktPro Normal";
   font-size: 20px;
   letter-spacing: 0px;
+  position: relative;
   opacity: 0;
   z-index: 100;
   animation: riseFade 0.4s forwards;
