--- a/css/projectPage.css
+++ b/css/projectPage.css
@@ -90,6 +90,7 @@ width: 60vw;
 .menu ul a {
   color: #F7F7F7;
   display: block;
+  position: relative;
   padding: 5px 20px;
   opacity: .5;
   transition: opacity .5s ease-out;
@@ -99,6 +100,7 @@ width: 60vw;
 .menu ul a:hover {
   opacity: 1;
 }
+
 
 #menuExpand{
   padding-left: 10px;
@@ -110,13 +112,10 @@ width: 60vw;
   z-index: 100;
 }
 
-.projectLink{
-  z-index: 100;
-}
-
 #projTitle{
   line-height: 42px;
 }
+
 
 #visitSiteArrow{
   transform: translate3d(0px, 0px, 0px);
@@ -130,7 +129,7 @@ width: 60vw;
 
 .mainContent{
   position: relative;
-    z-index: -100;
+  /* z-index: -1; */
 }
 
 .flex2-container{
